; ModuleID = '/home/carl/AnghaBench/micropython/ports/nrf/boards/microbit/modules/extr_microbitdisplay.c_microbit_display_init.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/nrf/boards/microbit/modules/extr_microbitdisplay.c_microbit_display_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MIN_COLUMN_PIN = common dso_local global i32 0, align 4
@MAX_ROW_PIN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @microbit_display_init() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @MIN_COLUMN_PIN, align 4
  store i32 %2, i32* %1, align 4
  br label %3

3:                                                ; preds = %10, %0
  %4 = load i32, i32* %1, align 4
  %5 = load i32, i32* @MAX_ROW_PIN, align 4
  %6 = icmp sle i32 %4, %5
  br i1 %6, label %7, label %13

7:                                                ; preds = %3
  %8 = load i32, i32* %1, align 4
  %9 = call i32 @nrf_gpio_cfg_output(i32 %8)
  br label %10

10:                                               ; preds = %7
  %11 = load i32, i32* %1, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %1, align 4
  br label %3

13:                                               ; preds = %3
  ret void
}

declare dso_local i32 @nrf_gpio_cfg_output(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
